--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -110,6 +110,13 @@
     "text_encoding": "cpp",
     "cinttypes": "cpp",
     "typeinfo": "cpp",
-    "variant": "cpp"
+    "variant": "cpp",
+    "chrono": "cpp",
+    "thread": "cpp",
+    "cstring": "cpp",
+    "ratio": "cpp",
+    "iomanip": "cpp",
+    "semaphore": "cpp",
+    "stop_token": "cpp"
   }
 }
